client/src/pages/Home/Home.module.css
.page {
  background-color: white;
  width: 99%;
  margin: auto;
}
.hero {
    text-align: left;
    padding: 4rem 2rem;
  }
  
  .title {
    font-size: 4rem;
    margin: 1rem auto;
    max-width: 50rem;
    color: #26471a;
  }
  
  .subtitle {
    font-size: 1.25rem;
    color: #26471a;
    max-width: 50rem;
    margin: 1rem auto;
  }
  .link {
    font-size: 1.25rem;
    color: #8b6a15;
    max-width: 50rem;
    margin: 0 auto;
    display: block;
  }

  .featured {
    background-color: #26471a;
  }

  .projectsGrid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(17%, 22%));
  }

